# gobs

./: Cargo.toml  README.md
gobs/: Cargo.toml  README.md
gobs-cli/: Cargo.toml
gobs-cli/src/: main.rs
gobs-core/: Cargo.toml
gobs-core/examples/support/: main_loop.rs
gobs-core/src/: cubic_surface_extractor.rs  lib.rs  mesh.rs  raw_volume.rs  raw_volume_sampler.rs  region.rs  sampler.rs  volume.rs  voxel.rs
gobs-core/tests/: cubit_surface_extractor_test.rs
gobs-examples/: Cargo.toml
gobs-examples/examples/: model.rs  simple.rs
gobs-examples/examples/support/: camera.rs  main_loop.rs  mod.rs
gobs/examples/: chr_super2.vox  model.rs  obj.rs  simple.rs
gobs/examples/support/: camera.rs  main_loop.rs  mod.rs
gobs/src/: cubic_surface_extractor.rs  lib.rs  mesh.rs  raw_volume.rs  raw_volume_sampler.rs  region.rs  sampler.rs  vertex.rs  volume.rs  voxel.rs
gobs/tests/: cubit_surface_extractor_test.rs
