[package]
name = "gobs-cli"
version = "0.1.0"
authors = ["Daniel Parnell <me@danielparnell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gobs-core = { path = "../gobs-core" }
structopt = "0.3.13"
dot_vox = "4.1.0"
