[package]
name = "gobs-examples"
version = "0.1.0"
authors = ["Daniel Parnell <me@danielparnell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gobs-core = { path = "../gobs-core" }

[dev-dependencies]
glium = "0.27.0"
glutin = "0.24.0"
dot_vox = "4.1.0"