[package]
name = "gobs"
version = "0.1.1"
edition = "2018"
readme = "README.md"
repository = "https://github.com/dparnell/gobs"
authors = ["Daniel Parnell <me@danielparnell.com>"]
homepage = "https://github.com/dparnell/gobs"
license = "CC-BY-4.0"
keywords = ["voxel"]
description = "A port of some parts of PolyVox from C++ to rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vek = "0.10.1"

[dev-dependencies]
glium = "0.27.0"
glutin = "0.24.0"
dot_vox = "4.1.0"